--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -9,8 +9,7 @@ $green: #6ca793;
 
 $content-width: 1920px;
 $body-padding: 64px;
-$body-padding-lg: 40px;
-// $body-padding-lg: 96px; // change all but the hero to this
+$body-padding-xxl: 40px;
 $body-padding-md: 24px;
 
 $vertical-section-padding: 196px;
@@ -18,6 +17,12 @@ $vertical-section-padding-xxl: 156px;
 $vertical-section-padding-lg: 124px;
 $vertical-section-padding-md: 148px;
 $vertical-section-padding-sm: 96px;
+
+$horizontal-section-padding: 148px;
+$horizontal-section-padding-xxl: 96px;
+$horizontal-section-padding-xl: 72px;
+$horizontal-section-padding-md: 48px;
+// $horizontal-section-padding-sm: 96px;
 
 $test: 2px dashed coral;
 $test-bg: cornflowerblue;
